--- a/portfolio-index.html
+++ b/portfolio-index.html
@@ -8,14 +8,10 @@
       <link rel="stylesheet" media="mediatype and|not|only (expressions)" href="print.css">
     </head>
          <div id="navbar" class="sticky">
-         <a id="profile-link" href=".contact">Contact</a>
+         <a id="profile-link" href="#contact-link">Contact</a>
          <a id="profile-link" href="#projects"> Work</a>
          <a id="profile-link" href="#about">About</a>
          </div>
-
-    <!-- END NAV -->
-
-    <!-- START WELCOME SECTION -->
 
     <br>
     <br>
@@ -23,81 +19,71 @@
     <br>
      <h1 id="about" style="font-size: 50px;">My Name is Justine</h1>
      <h3 id="about" style="font-size: 25px;"> I am training to be a front-end and back-end Software Developer<h3> <br><br><br><br><br><br><br><br>
-       </section>
+   </section>
 
-       <!-- END WELCOME SECTION -->
-
-       <!-- START PROJECTS SECTION -->
-
-       <section id="projects">
+   <section id="projects">
           <h1 style="color:white; font-size: 50px; text-align: center; background-color: darkred;padding-top: 75px;">Below are a few of my projects</h1>
-      <div id="wrapper">
-      <div id="item" class="project-tile">
+   <div id="wrapper">
+   <div id="item" class="project-tile">
                 <h2>Chef Survey</h2>
-        <a href="https://codepen.io/jlj2189/pen/YzqJvYZ"></a>
-         <img alt="Chef Survey" src="https://media.istockphoto.com/photos/cutting-board-with-chef-hat-knife-tomatoes-onion-background-picture-id185095805?k=6&m=185095805&s=612x612&w=0&h=WaCGCHRCyQwFAt3OX0n47Qk0iKf9s6Nh_3rZJnPkzQQ="
+   <a href="https://codepen.io/jlj2189/pen/YzqJvYZ"></a>
+   <img alt="Chef Survey" src="https://media.istockphoto.com/photos/cutting-board-with-chef-hat-knife-tomatoes-onion-background-picture-id185095805?k=6&m=185095805&s=612x612&w=0&h=WaCGCHRCyQwFAt3OX0n47Qk0iKf9s6Nh_3rZJnPkzQQ="
          width="250"" height="250">
-      </div>
-      <div id="item" class="project-tile">
+   </div>
+   <div id="item" class="project-tile">
         <h2>Chef Survey</h2>
                                          <a href="https://codepen.io/jlj2189/pen/YzqJvYZ"></a>
-         <img alt="Chef Survey" src="https://media.istockphoto.com/photos/cutting-board-with-chef-hat-knife-tomatoes-onion-background-picture-id185095805?k=6&m=185095805&s=612x612&w=0&h=WaCGCHRCyQwFAt3OX0n47Qk0iKf9s6Nh_3rZJnPkzQQ="
+  <img alt="Chef Survey" src="https://media.istockphoto.com/photos/cutting-board-with-chef-hat-knife-tomatoes-onion-background-picture-id185095805?k=6&m=185095805&s=612x612&w=0&h=WaCGCHRCyQwFAt3OX0n47Qk0iKf9s6Nh_3rZJnPkzQQ="
          width="250"" height="250">
-                       </div>
-      <div id="item" class="project-tile">
-                <h2>Chef Survey</h2>
-        <a href="https://codepen.io/jlj2189/pen/YzqJvYZ"></a>
-         <img alt="Chef Survey" src="https://media.istockphoto.com/photos/cutting-board-with-chef-hat-knife-tomatoes-onion-background-picture-id185095805?k=6&m=185095805&s=612x612&w=0&h=WaCGCHRCyQwFAt3OX0n47Qk0iKf9s6Nh_3rZJnPkzQQ="
+   </div>
+   <div id="item" class="project-tile">
+   <h2>Chef Survey</h2>
+   <a href="https://codepen.io/jlj2189/pen/YzqJvYZ"></a>
+   <img alt="Chef Survey" src="https://media.istockphoto.com/photos/cutting-board-with-chef-hat-knife-tomatoes-onion-background-picture-id185095805?k=6&m=185095805&s=612x612&w=0&h=WaCGCHRCyQwFAt3OX0n47Qk0iKf9s6Nh_3rZJnPkzQQ="
          width="250"" height="250">
       </div>
       </div>
-                                  <br>
-                                  <br>
-                                  <br>
-                                  <br>
-                                  <br>
-                                  <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
        </section>
-
-      <!-- END PROJECTS SECTION -->
-
-      <!-- START CONTACT SECTION -->
-      <section id="contact" class="contact-section">
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+   <br>
+      <section id="contact-link" class="contact-section">
   <div class="contact-section-header">
     <h2>Let's work together...</h2>
     <p>How do you take your coffee?</p>
   </div>
-  <div class="contact-links">
-      <section id="contact" class="contact-section">
-  <div class="contact-section-header">
-    <h2>Let's work together...</h2>
-    <p>How do you take your coffee?</p>
-  </div>
-  <div class="contact-links">
-    <a
-      href="https://facebook.com/freecodecamp"
+   <br>
+   <br>
+   <br>
+
+  <div id="profile-link">
+         <a style="padding-left: 675px;"
+      href="https://facebook.com/"
       target="_blank"
       class="btn contact-details"
-      ><i class="fab fa-facebook-square"></i> Facebook</a
-    >
-    <a
-      id="profile-link"
-      href="https://github.com/freecodecamp"
+      ><i class="fab fa-facebook-square"></i>
+      <img class="contact-image" src="https://lh4.googleusercontent.com/-qfFKsYZbyBQ/TYHwDPCeXgI/AAAAAAAAE9M/T0BTA6mZYDE/s1600/Facebook+icon+01.png"></a>
+
+       <a
+      id="profile-link"  href="https://github.com/https://github.com/jlj2189/Portfolio"
       target="_blank"
       class="btn contact-details"
-      ><i class="fab fa-github"></i> GitHub</a
-    >
-    <a
-      href="https://twitter.com/freecodecamp"
+      ><i class="fab fa-github"></i>
+      <img class="contact-image" src="https://yt3.ggpht.com/-3BKTe8YFlbA/AAAAAAAAAAI/AAAAAAAAAAA/ad0jqQ4IkGE/s900-c-k-no-mo-rj-c0xffffff/photo.jpg"></a>
+   <a style="padding-left: 100px;"
+      href="https://twitter.com/"
       target="_blank"
       class="btn contact-details"
-      ><i class="fab fa-twitter"></i> Twitter</a
-    >
-    <a href="mailto:example@example.com" class="btn contact-details"
-      ><i class="fas fa-at"></i> Send a mail</a
-    >
-    <a href="tel:555-555-5555" class="btn contact-details"
-      ><i class="fas fa-mobile-alt"></i> Call me</a
-    >
+      ><i class="fab fa-twitter"></i>
+<img class="contact-image" src="http://icons.iconarchive.com/icons/iynque/ios7-style/1024/Twitter-icon.png"> </a>
   </div>
 </section>
