--- a/portfolio-index.html
+++ b/portfolio-index.html
@@ -12,13 +12,20 @@
          <a id="profile-link" href="#projects"> Work</a>
          <a id="profile-link" href="#about">About</a>
          </div>
-
     <br>
     <br>
     <br>
     <br>
      <h1 id="about" style="font-size: 50px;">My Name is Justine</h1>
-     <h3 id="about" style="font-size: 25px;"> I am training to be a front-end and back-end Software Developer<h3> <br><br><br><br><br><br><br><br>
+     <h3 id="about" style="font-size: 25px;"> I am training to be a front-end and back-end Software Developer<h3>
+       <br>
+       <br>
+       <br>
+       <br>
+       <br>
+       <br>
+       <br>
+       <br>
    </section>
 
    <section id="projects">
@@ -32,7 +39,7 @@
    </div>
    <div id="item" class="project-tile">
         <h2>Chef Survey</h2>
-                                         <a href="https://codepen.io/jlj2189/pen/YzqJvYZ"></a>
+   <a href="https://codepen.io/jlj2189/pen/YzqJvYZ"></a>
   <img alt="Chef Survey" src="https://media.istockphoto.com/photos/cutting-board-with-chef-hat-knife-tomatoes-onion-background-picture-id185095805?k=6&m=185095805&s=612x612&w=0&h=WaCGCHRCyQwFAt3OX0n47Qk0iKf9s6Nh_3rZJnPkzQQ="
          width="250"" height="250">
    </div>
@@ -58,32 +65,27 @@
    <br>
       <section id="contact-link" class="contact-section">
   <div class="contact-section-header">
-    <h2>Let's work together...</h2>
-    <p>How do you take your coffee?</p>
+    <h2>Let's work with eachother in the future</h2>
+    <p>The more projects the better experience</p>
   </div>
    <br>
    <br>
    <br>
-
-  <div id="profile-link">
-         <a style="padding-left: 675px;"
+         <a style="padding-left: 635px;"
       href="https://facebook.com/"
-      target="_blank"
-      class="btn contact-details"
-      ><i class="fab fa-facebook-square"></i>
+      target=”_blank”
+      >
       <img class="contact-image" src="https://lh4.googleusercontent.com/-qfFKsYZbyBQ/TYHwDPCeXgI/AAAAAAAAE9M/T0BTA6mZYDE/s1600/Facebook+icon+01.png"></a>
-
-       <a
-      id="profile-link"  href="https://github.com/https://github.com/jlj2189/Portfolio"
+   <a
+      id="profile-link"
+      href="https://github.com/jlj2189/Portfolio"
       target="_blank"
-      class="btn contact-details"
-      ><i class="fab fa-github"></i>
+      >
       <img class="contact-image" src="https://yt3.ggpht.com/-3BKTe8YFlbA/AAAAAAAAAAI/AAAAAAAAAAA/ad0jqQ4IkGE/s900-c-k-no-mo-rj-c0xffffff/photo.jpg"></a>
-   <a style="padding-left: 100px;"
+   <a
       href="https://twitter.com/"
-      target="_blank"
-      class="btn contact-details"
-      ><i class="fab fa-twitter"></i>
+      target=”_blank”
+      >
 <img class="contact-image" src="http://icons.iconarchive.com/icons/iynque/ios7-style/1024/Twitter-icon.png"> </a>
-  </div>
 </section>
+       </body>
