--- a/portfolio-index.html
+++ b/portfolio-index.html
@@ -8,9 +8,9 @@
       <link rel="stylesheet" media="mediatype and|not|only (expressions)" href="print.css">
     </head>
          <div id="navbar" class="sticky">
-         <a id="profile-link" href="#contact-link">Contact</a>
-         <a id="profile-link" href="#projects"> Work</a>
-         <a id="profile-link" href="#about">About</a>
+         <a id="nav" href="#contact-link">Contact</a>
+         <a id="nav" href="#projects"> Work</a>
+         <a id="nav" href="#about">About</a>
          </div>
     <br>
     <br>
@@ -86,6 +86,7 @@
       href="https://twitter.com/"
       target=”_blank”
       >
-<img class="contact-image" src="http://icons.iconarchive.com/icons/iynque/ios7-style/1024/Twitter-icon.png"> </a>
+<img class="contact-image" src="http://icons.iconarchive.com/icons/iynque/ios7-style/1024/Twitter-icon.png"></a>
 </section>
        </body>
+                                                                                                           </html>
